Clean up list page layout. Add expand/collapse to list items. Fix shoplist edit in cms.

--- a/css/color.css
+++ b/css/color.css
@@ -54,7 +54,7 @@ a.postshare span {
 }
 
 .panel .linearlist li .prodname span{
-	color:#999;
+	color:#777;
 }
 
 .panel .linearlist li .button{
