--- a/css/list.css
+++ b/css/list.css
@@ -181,7 +181,7 @@ html, body{
 	display: block;
 	width:100%;
 	font-weight: normal;
-	line-height: 36px;
+	line-height: 48px;
 	padding: 25px 0px;
 	text-transform: uppercase;
 	font-size: 36px;
@@ -189,6 +189,7 @@ html, body{
 	background:#999;
 	color:#eee;
 	font-weight:bold;
+	padding: 15px 0px 5px 0px;
 }
 
 .panel .header{
@@ -275,6 +276,16 @@ font-weight: bold;
 	height:100%;
 	overflow-x: hidden;
 	overflow-y: auto;
+}
+
+.info{
+	display: block;
+	float: right;
+	color: #fff;
+	margin: 5px 25px;
+	font-size: 48px;
+	position: absolute;
+	right: 0px;
 }
 
 /*.popup{
@@ -514,7 +525,7 @@ a.postshare{
 	float: left;
 	font-size: 20px;
 	line-height:20px;
-	margin: 3% 0px 0px 0px;
+	margin: 0px 0px 0px 0px;
 	width: 20%;
 	vertical-align:middle;
 	text-align:right;
@@ -554,6 +565,22 @@ a.postshare{
     position: relative;
 	background-size: cover;
 	background-position: center center;
+}
+
+.panel .linearlist li.expand .icon{
+	width: 30%;
+	padding: 30%;
+}
+
+.panel .linearlist li.expand .produrl{
+	position: absolute;
+	right:3%;
+}
+
+.panel .linearlist li.expand .prodname {
+margin: 0px 2% 0px 2%;
+padding: 1% 5% 5% 1%;
+width: 90%;
 }
 
 
